@@ -30,6 +30,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.Type;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.*;
@@ -46,6 +47,7 @@ public class GameProfileBuilder {
             .registerTypeAdapter(PropertyMap.class, new PropertyMap.Serializer()).create();
     @Getter
     private static final Map<UUID, CachedProfile> cache = new HashMap<>();
+    @SuppressWarnings("unused")
     private static final Object sync = new Object();
     private static long cacheTime = -1L;
 
@@ -100,7 +102,7 @@ public class GameProfileBuilder {
     }
 
     public static String getText(String url) throws IOException {
-        URL website = new URL(url);
+        URL website = URI.create(url).toURL();
         URLConnection connection = website.openConnection();
         BufferedReader in = new BufferedReader(
                 new InputStreamReader(
